# pizzapy

./: .gitignore  README.md  SETUP.md  central_script.py  cli.py  documentation.txt  main.py  main_script.py  pbcopy  pyproject.toml  requirements.txt  requirements312.txt  updater.py  working-requirements.txt
archives/: temp.md
brewing/: available.txt  available_app.txt  available_com.txt  dailyfutopmodel.py  domain_checker.py  english3000.txt  guru_model_get_barchart_marketcap.py  hello.py  test.py  test2.py  test4.py  zoo.py
core_stock_browser/: core_browser_controller.py  core_browser_view.py
core_stock_update/: core_update_controller.py  core_update_view.py
database_update/: #generated_stock_list.py#  central_script.py  create_postgres_tables_model.py  general_terminal_model.py  generate_file_model.py  generated_stock_list.py  postgres_command_model.py  postgres_connection_model.py  postgres_execution_model.py  postgres_manage_database_model.py  postgres_manage_database_script.py  postgres_model.py  postgres_read_model.py  postgres_source_model.py  stock_list_model.py
docs/: fuji_compatible_setup.md
futures_browser/: fut_browser_ctrl.py  fut_browser_view.py
futures_update/: fut_update_ctrl.py  fut_update_view.py  ino_model.py  page.html
general_update/: general_model.py  general_terminal_model.py  gui_model.py  plus_qt_model.py  price_cap_model.py  qt_model.py  working_qt_model.py
gui_dock/: main_dock_controller.py  main_dock_view.py
guru_stock_update/: brew.py  brew2.py  guru_book_value_model.py  guru_debt_model.py  guru_earn_model.py  src.html  (+11 more)
(+169 files in other folders)
